--- a/style.css
+++ b/style.css
@@ -75,6 +75,169 @@ html{
 }
 /* End of Navbar */
 
+/* Cube */
+
+/* Creating 3D environment using perspective property */
+.cube-wrapper{
+    perspective: 100rem;
+}
+.cube{
+    width: 25rem;
+    height: 45rem;
+    transform-style: preserve-3d;
+    transform: rotateX(0deg) rotateY(20deg) rotateZ(0deg);
+    position: relative;
+    top:-2rem;
+    transition: transform 0.5s;
+}
+
+.front-side, .back-side {
+    width: 100%;
+    height: 100%;
+    background: #fee;
+    position: absolute;
+    transform-style: preserve-3d;
+    box-shadow: inset .1rem .1rem .1rem #ddd, inset -.1rem -.1rem .1rem #ddd;
+}
+
+.front-side{
+    padding: 2.5rem;
+    transform: translateZ(5rem);
+}
+
+.front-side::before, .front-side::after{
+    content: "";
+    width: 100%;
+    height: 10rem;
+    background: #fee;
+    position: absolute;
+    box-shadow: inset .1rem .1rem .1rem #ddd, inset -.1rem -.1rem .1rem #ddd;
+}
+
+.front-side::before{
+    top: 0;
+    left: 0;
+    transform: rotateX(-90deg);
+    transform-origin: top;
+}
+
+.front-side::after{
+    bottom: 0;
+    left: 0;
+    transform: rotateX(90deg);
+    transform-origin: bottom;
+}
+.front-side img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.back-side {
+    text-align: center;
+    /* justify-items: center; */
+    transform: translateZ(-5rem);
+}
+
+.back-side::before, .back-side::after{
+    content: "iPhone";
+    position: absolute;
+    width: 10rem;
+    height: 100%;
+    background-color: #fee;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    font-weight: 300;
+    color: #ec1919;
+    box-shadow: inset .1rem .1rem .1rem #ddd, inset -.1rem -.1rem .1rem #ddd;
+}
+
+.back-side::before{
+    top:0;
+    left:0;
+    transform: rotateY(-90deg);
+    transform-origin:left;
+}
+.back-side::after {
+    top: 0;
+    right: 0;
+    transform: rotateY(90deg);
+    transform-origin: right;
+}
+.back-side i {
+    font-size: 10rem;
+    color: var(--primary-color);
+    text-shadow: .1rem .1rem .2rem #aaa, -.1rem -.1rem .2rem #aaa;
+    transform: rotateY(180deg);
+}
+
+/* Controls */
+.controls{
+    position: absolute;
+    bottom: -12rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 10rem;
+    height: 10rem;
+    background-color: rgba(0,0,0,0.9);
+    border-radius: 50%;
+    border: 1rem solid rgba(0, 0, 0, 0.8);
+}
+
+.controls a{
+    position: absolute;
+}
+
+.controls a:nth-child(1){
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.controls a:nth-child(2) {
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.controls a:nth-child(3) {
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.controls a:nth-child(4) {
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.controls a:nth-child(5) {
+    right: 10%;
+    top: 10%;
+    transform: rotate(45deg);
+}
+
+.controls a:nth-child(6) {
+    bottom: 10%;
+    left: 10%;
+    transform: rotate(45deg);
+}
+.controls i{
+    font-size: 1.5rem;
+    color: var(--primary-color);
+    opacity: 0.5;
+    transition: opacity .5s;
+}
+
+.controls a:hover i{
+    opacity: 1;
+}
+/* End of Controls */
+/* End of Cube */
+
 /* Banner */
 .section-1-banner{
    flex-direction: column;
@@ -139,4 +302,30 @@ html{
   );
 }
 /* End of Banner */
+
+/* Slideshow */
+.slideshow{
+    width:100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+    z-index:-1;
+}
+
+.slideshow div {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0;
+    transition: opacity 5s;
+}
+
+.slideshow div.change{
+    opacity: 1;
+}
+/* End of Slideshow */
 /* End of Section 1 */
